# rust-stop-words

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: rust.yml  tests.yml
examples/: full_language_name.rs  iso_693_1_code.rs  iso_693_2t_code.rs  remove_stop_words_with_regex.rs  simple.rs  vec_to_hash.rs
src/: hebrew.txt  helpers.rs  language_names.rs  lib.rs
src/constructed/: dothraki  dovahzul  highvalyrian  klingon  navi  quenya  sindarin
src/nltk/: arabic  belarusian  french  german  kazakh  portuguese  slovenian  spanish  uzbek
src/savand/: gujarati
tests/: arabic.rs  azerbaijani.rs  bulgarian.rs  catalan.rs  czech.rs  danish.rs  dutch.rs  english.rs  finnish.rs  french.rs  german.rs  greek.rs  hebrew.rs  hindi.rs  hungarian.rs  indonesian.rs  italian.rs  kazakh.rs  macro_generated_tests.rs  nepali.rs  norwegian.rs  other_tests.rs  polish.rs  portuguese.rs  romanian.rs  russian.rs  slovak.rs  slovenian.rs  spanish.rs  swedish.rs  tajik.rs  turkish.rs  ukrainian.rs  vietnamese.rs
