[package]
name = "stop-words"
version = "0.3.2"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Common stop words in several languages"
edition = "2018"
readme = "README.md"
repository = "https://github.com/cmccomb/stop-words"
homepage = "https://github.com/cmccomb/stop-words"
documentation = "https://docs.rs/stop-words"
license = "MIT OR Apache-2.0"
keywords = ["nlp", "stop-words", "text", "languages", "stopwords"]
categories = ["text-processing", "internationalization", "localization"]

[features]
default = []
enum = ["strum", "strum_macros"]

# A list of the optional dependencies
[dependencies]
strum = {version = "0.20.0", optional = true}
strum_macros = {version = "0.20.0", optional = true}