[package]
name = "stop-words"
version = "0.6.1"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Common stop words in many languages"
edition = "2021"
readme = "README.md"
repository = "https://github.com/cmccomb/stop-words"
homepage = "https://github.com/cmccomb/stop-words"
documentation = "https://docs.rs/stop-words"
license = "MIT OR Apache-2.0"
keywords = ["nlp", "stop-words", "text", "languages", "stopwords"]
categories = ["text-processing", "internationalization", "localization"]

[features]
default = ["serde_json"]
nltk = []

[dependencies]
serde_json = {version="1.0.68", optional=true}

[dev-dependencies]
human_regex = "0.2.0"