[package]
name = "stop-words"
version = "0.7.2"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Common stop words in many languages"
edition = "2021"
readme = "README.md"
repository = "https://github.com/cmccomb/stop-words"
homepage = "https://github.com/cmccomb/stop-words"
documentation = "https://docs.rs/stop-words"
license = "MIT OR Apache-2.0"
keywords = ["nlp", "stop-words", "text", "languages", "stopwords"]
categories = ["text-processing", "internationalization", "localization"]

[features]
default = ["iso"]
iso = []
nltk = []
constructed = []

[build-dependencies]
serde_json = {version="^1"}

[dependencies]
serde_json = {version="^1"}

[dev-dependencies]
human_regex = "^0.3.0"